@@ -7,6 +7,8 @@
 The format is based on [[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]].
 
 ** [[https://github.com/ohyecloudy/slab/compare/v1.0.5...HEAD][Unrelease]]
+*** Added
+    - [[https://sentry.io/][sentry]] 에러 리포팅 소프트웨어 통합
 ** [[https://github.com/ohyecloudy/slab/compare/v1.0.5...v1.0.6][v1.0.6]]
 *** Added
     - pipeline 출력을 간단하게 한다
